<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width= "fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width= "fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">"

        <TextView android:id="@+id/textViewPseudo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtViewPseudo"/>
        <EditText
            android:id="@+id/editTextPseudo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" />
        <TextView android:id="@+id/textViewScore"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtViewTime"/>
        <Button
            android:id="@+id/BtnValDataP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtButtonValider"/>"
        <Button
            android:id="@+id/BtnAnnulerDataP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtButtonAnnuler"/>
    </LinearLayout>

</ScrollView>
